--- a/css/styles.css
+++ b/css/styles.css
@@ -10116,3 +10116,16 @@ section.resume-section .resume-section-content {
     padding-bottom: 5rem;
   }
 }
+.flex-container {
+  display: flex;
+}
+.flex-container > div {
+  
+  margin: 10%;
+ 
+  
+}
+div.desc {
+  
+  text-align: center;
+}
