--- a/css/styles.css
+++ b/css/styles.css
@@ -10122,10 +10122,11 @@ section.resume-section .resume-section-content {
 .flex-container > div {
   
   margin: 10%;
- 
+  padding: 20px;
+  font-size: 20px;
   
 }
 div.desc {
-  
+  padding: 15px;
   text-align: center;
 }
